platform-charts/admin-test/templates/network/admin-ww-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ww
spec:
  type: ClusterIP
  selector:
    app: ww
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
